--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -70,7 +70,7 @@ ul{
 .transition-box{
     height:100vh;
     width:100vw;
-    z-index:1;
+    z-index:4;
     position:absolute;
     top:100vh;
     transition:0.3s ease-out all;
